src/session/04.04.20-2/received_errors
Compilation failed
test2.c: In function ‘main’:
test2.c:6:1: error: expected ‘;’ before ‘}’ token
 }
 ^
